first commit of new book web service
