# routes/index.js
@@ -4,6 +4,6 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
-router.use('/contacts', require('./contacts'));
+router.use('/books', require('./books'));
 
 module.exports = router;
